--- a/src/App.css
+++ b/src/App.css
@@ -83,18 +83,15 @@ main {
   z-index: 10;
 }
 
-/* .liquid-glass {
-  position: absolute;
-  top: 370px;
-  left: 32.5%;
-  z-index: 5;
+.liquid-glass {
+  /*z-index: 5;
   width: 535px;
-  height: 242px;
+  height: 242px;*/
   background: rgba(255, 255, 255, 0.17);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(6.2px);
-} */
+}
 
 .about-me {
   background-color: var(--kaki);
@@ -343,4 +340,57 @@ main {
   width: 100%;
   height: auto;
   object-fit: contain;
+}
+
+.all__infos {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 80%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding-top: 150px;
+  justify-items: center;
+  align-items: center;
+}
+
+.infoblock {
+  display: flex;
+  flex-direction: column;
+  font-family: var(--font3);
+  font-weight: 1000;
+  padding: 30px;
+  border: 2px solid var(--blanc-creme);
+  text-align: center;
+  width: 520px;
+  height: 195px;
+  justify-content: center;
+}
+
+.infoblock__title {
+  font-size: 30px;
+  margin: 0;
+}
+
+.infoblock__description, .infoblock__content {
+  font-size: 28px;
+  font-style: italic;
+}
+
+.figma {
+  z-index: 5;
+  position: absolute;
+  top: 32.5%;
+  left: 38%;
+  width: 50px;
+  height: 50px;
+}
+
+.usa_flag {
+  position: absolute;
+  bottom: 11.5%;
+  left: 34.5%;
+  width: 77px;
+  height: 47px;
 }
